	- Add a BodyUtils.GetTerrainAltitudeAtPos function.
	- Adds optional setting to clamp proc part/proc wing max HP to a configurable maximum when Runway Project enabled.
	- Adds UI Icon team color reset button.
	- Adds missile names to missile warning icons when vessel names enabled.
	- Add a config option for the maximum time scaling.

- AI:
	- Add a 5° deadzone around being on target for dynamic damping to avoid feed-back loop in PID.
	- Add a check for requested extending already being satisfied.
	- Add terrain awareness to the pilot AI's waypoint fly-to direction.
	- Add a 'Waypoint Terrain Avoidance' slider to the pilot AI to control the range and strength of the waypoint terrain avoidance reaction.
	- Fixes AI GUI slider increments to match AI PAW.
	- Adds Dynamic Damping P/Y/R readouts to AI GUI.
	- Fix AI takeoff behavior.
	- Add Store/Restore option to save control surface configs in Pilot AI.
	- Add extend angle to AI to clamp climb/dive angle when doing Air-to-air extending.
	- Add Air/Ground target preference weighting to Target Priorities.
	- Make the extend toggle apply to air-to-air missiles as well as air-to-air guns.
	- Update the AI GUI help text for the current extending settings.
	- Make the AI GUI vertically resizeable.
	- AI will now head to target's last known position if contact lost (out of sight range/angle/radar detection), with accuracy of predicted position decaying over time.
	- AI will now enable radars when guard mode enabled.
	- Add an altitude steer limiter to the pilot AI.
	- Apply user-defined steer limiters to roll.
	- Force VTOL AI to aim towards targets when trying to fire missiles (if it can't already fire the missile).
	- Add a PID auto-tuning mode:
		- The AI will use gradient descent to optimize the plane's ability to turn to a range of headings and stabilize in those directions.